--- a/src/emails/failure/html.pug
+++ b/src/emails/failure/html.pug
@@ -1,9 +1,9 @@
 p Hi Book-it Developers,
+
 p Looks like you have some issues with the current deployment. 
 
-P Stats
-
 ul
+    li=`Report URL: ${report}`
     li=`Collection Name: ${collection}`
     li=`Total Tests: ${executions}`
     li=`Number of Failures: ${failures.length}`
